<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context="org.varonesoft.luke.ricodarlo.EditorActivity">


    <EditText
        android:id="@+id/et_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/str_name"
        android:inputType="textPersonName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/str_desc"
        android:inputType="textPersonName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <ImageButton
        android:id="@+id/bi_startdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_my_calendar"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/et_desc" />

    <EditText
        android:id="@+id/et_startdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="7dp"
        android:layout_marginTop="8dp"
        android:editable="false"
        android:focusable="auto"
        android:inputType="none|date"
        app:layout_constraintRight_toLeftOf="@+id/bi_startdate"
        app:layout_constraintTop_toBottomOf="@+id/et_desc" />

    <EditText
        android:id="@+id/et_repeat_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:text="1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bi_startdate" />

    <TextView
        android:id="@+id/tv_repeat_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/str_repeat_every_n_days"
        app:layout_constraintRight_toLeftOf="@+id/et_repeat_days"
        app:layout_constraintTop_toBottomOf="@+id/bi_startdate" />

    <EditText
        android:id="@+id/et_repeat_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_repeat_days" />

    <TextView
        android:id="@+id/tv_repeat_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/str_repeat_every_n_hours"
        app:layout_constraintRight_toLeftOf="@+id/et_repeat_hours"
        app:layout_constraintTop_toBottomOf="@+id/et_repeat_days" />

    <TextView
        android:id="@+id/tv_startdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/str_startdate"
        app:layout_constraintRight_toLeftOf="@+id/et_startdate"
        app:layout_constraintTop_toBottomOf="@+id/et_desc" />
</android.support.constraint.ConstraintLayout>
